<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.TransactionSettingsFragment">

    <TextView
        android:id="@+id/tv_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_minimum_mutation"
        android:fontFamily="@font/inter_extra_bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_old_password"
        android:layout_marginHorizontal="18dp"
        android:hint="@string/tv_hint_minimum_mutation">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_account_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_settings_jasa"
        android:fontFamily="@font/inter_extra_bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edt_old_password"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_account_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_account_number"
        android:layout_marginHorizontal="18dp"
        android:hint="@string/tv_hint_settings_jasa">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_change_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/blue_primary"
        android:fontFamily="@font/inter_extra_bold"
        android:text="@string/tv_change_transaction_settings"
        android:textColor="@color/white"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_account_number" />

</androidx.constraintlayout.widget.ConstraintLayout>