<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.LoginActivity">

    <ImageView
        android:id="@+id/iv_login_illustration"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/iv_login"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extra_bold"
        android:text="@string/tv_title_login"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/iv_login_illustration"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_illustration" />

    <TextView
        android:id="@+id/tv_email_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/inter_extra_bold"
        android:text="@string/tv_register_account_mobile_number_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/tv_register_account_mobile_number_hint"
        app:layout_constraintStart_toStartOf="@+id/tv_email_form_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_form_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_sandi_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/inter_extra_bold"
        android:text="@string/tv_title_form_password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_email_form_title"
        app:layout_constraintTop_toBottomOf="@id/edt_email_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_password_hint"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_sandi_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_sandi_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableEnd="@drawable/ic_eye_close"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/inter_extra_bold"
        android:text="@string/btn_masuk"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_password"
        android:backgroundTint="@color/blue_primary"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>