<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.ChangeProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_appbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/blue_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/change_profile_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/change_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_change_profile_title"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_extra_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="55dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/cl_appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="18dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ic_profile_circle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_profile_default"
                app:civ_border_width="5dp"
                app:civ_border_color="@color/blue_primary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/ic_edit_pencil"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_edit_pencil"
                android:layout_marginTop="70dp"
                app:layout_constraintBottom_toBottomOf="@+id/ic_profile_circle"
                app:layout_constraintEnd_toEndOf="@+id/ic_profile_circle"
                app:layout_constraintTop_toTopOf="@+id/ic_profile_circle" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_change_profile_name"
                android:fontFamily="@font/inter_extra_bold"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/ic_profile_circle"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/tv_hint_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tv_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_ewallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_change_profile_ewallet"
                android:fontFamily="@font/inter_extra_bold"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/edt_name"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_ewallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/tv_hint_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tv_ewallet">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="55dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_account_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_account_number"
                android:fontFamily="@font/inter_extra_bold"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/edt_ewallet"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/edt_account_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tv_account_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_change_profile_mobile_number"
                android:fontFamily="@font/inter_extra_bold"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/edt_account_number"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/edt_mobile_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tv_mobile_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_change_profile_address"
                android:fontFamily="@font/inter_extra_bold"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/edt_mobile_number"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_alamat"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:hint="@string/edt_address_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tv_alamat">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_change_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/blue_primary"
                android:fontFamily="@font/inter_extra_bold"
                android:text="@string/tv_change_profile_title"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/edt_alamat"
                app:layout_constraintTop_toBottomOf="@id/edt_alamat" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
